<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/rectangle_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/dialog_top_back"
            android:gravity="center">

            <com.mxi.buildsterapp.widget.MyTextviewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_task"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <com.mxi.buildsterapp.widget.MyTextviewLight
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_info1"
                android:textColor="@color/color_blue"
                android:textSize="12sp"
                android:gravity="center"/>

            <com.mxi.buildsterapp.widget.MyTextviewLight
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_info2"
                android:textColor="@color/color_blue"
                android:textSize="12sp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:gravity="center">


                <com.mxi.buildsterapp.widget.MyButton
                    android:id="@+id/btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_back_two"
                    android:text="@string/delete"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:gravity="center">

                <com.mxi.buildsterapp.widget.MyButton
                    android:id="@+id/btn_cancle"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_back_two"
                    android:text="@string/cancel"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
