<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@drawable/rectangle_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/dialog_top_back"
            android:gravity="center">

            <com.mxi.buildsterapp.widget.MyTextviewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:paddingTop="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textColorHint="@color/color_blue">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_pass"
                    android:textColorHint="@color/color_blue"
                    android:textSize="14sp"
                    android:textColor="@color/color_blue"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textColorHint="@color/color_blue">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_pass"
                    android:textColorHint="@color/color_blue"
                    android:textSize="14sp"
                    android:textColor="@color/color_blue"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textColorHint="@color/color_blue">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pass"
                    android:textColorHint="@color/color_blue"
                    android:textSize="14sp"
                    android:textColor="@color/color_blue"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:gravity="center">

                <com.mxi.buildsterapp.widget.MyButton
                    android:id="@+id/btn_close"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_back_two"
                    android:text="@string/close"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:gravity="center">

                <com.mxi.buildsterapp.widget.MyButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_back_two"
                    android:text="@string/submit"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
