<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/rectangle_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/dialog_top_back"
            android:gravity="center">

            <com.mxi.buildsterapp.widget.MyTextviewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_screen_title"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textColorHint="@color/color_blue">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_screen_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/screen_title"
                    android:textColorHint="@color/color_blue"
                    android:textSize="14sp"
                    android:textColor="@color/color_blue"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:gravity="center">

                <com.mxi.buildsterapp.widget.MyButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_back_two"
                    android:text="@string/save"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:gravity="center">

                <com.mxi.buildsterapp.widget.MyButton
                    android:id="@+id/btn_cancle"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_back_two"
                    android:text="@string/cancel"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
