<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|left"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:tint="@color/color_blue"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.mxi.buildsterapp.widget.MyTextviewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textColor="@color/color_blue"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:paddingTop="25dp">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:hint="@string/f_name"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingLeft="20dp"
                    android:textSize="13dp"
                    android:singleLine="true"
                    android:inputType="textCapWords|textCapSentences"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:paddingTop="25dp">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:hint="@string/l_name"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingLeft="20dp"
                    android:textSize="13dp"
                    android:inputType="textCapWords|textCapSentences"
                    android:singleLine="true"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:paddingTop="25dp">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:hint="@string/email"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingLeft="20dp"
                    android:textSize="13dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:paddingTop="25dp">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:hint="@string/password"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingLeft="20dp"
                    android:textSize="13dp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:paddingTop="25dp">

                <com.mxi.buildsterapp.widget.MyEditText
                    android:id="@+id/ed_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:hint="@string/c_password"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingLeft="20dp"
                    android:textSize="13dp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="40dp">

                <com.mxi.buildsterapp.widget.MyButton
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/btn_main"
                    android:text="@string/sign_up"
                    android:textColor="@color/color_white"
                    android:textStyle="bold"
                    android:textSize="15sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <com.mxi.buildsterapp.widget.MyTextviewLight
                    android:id="@+id/tv_back_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account"
                    android:gravity="center"
                    android:textColor="@color/grey_text"
                    android:textSize="15sp"/>


            </LinearLayout>



        </LinearLayout>


    </ScrollView>

</LinearLayout>
