<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/ln_bottom">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:tint="@color/color_blue"/>

            <com.mxi.buildsterapp.widget.MyTextviewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_title"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:textColor="@color/color_blue"/>

        </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingLeft="25dp"
            android:paddingTop="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln_pdf_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/upload_pdf_back"
                android:orientation="vertical">

                <com.mxi.buildsterapp.widget.MyTextviewBold
                    android:id="@+id/tv_pdf_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_pdf"
                    android:gravity="center"
                    android:textColor="@color/color_white"
                    android:textSize="14.5sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_invite"
                    android:tint="@color/color_white"
                    android:paddingTop="7dp"/>

                <com.mxi.buildsterapp.widget.MyTextviewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tap"
                    android:gravity="center"
                    android:textColor="@color/color_white"
                    android:textSize="13sp"
                    android:paddingTop="7dp"/>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridView
                    android:id="@+id/grid_pdf_screen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="2"
                    android:gravity="center"
                    android:padding="3dp"
                    android:stretchMode="columnWidth"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.mxi.buildsterapp.widget.MyTextviewBold
                    android:id="@+id/tv_no_pdf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_pdf_screen"
                    android:gravity="center"
                    android:textColor="@color/color_blue"
                    android:textSize="20sp"
                    android:visibility="invisible"/>


            </LinearLayout>


        </FrameLayout>


    </LinearLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/ln_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:gravity="center">

                <com.mxi.buildsterapp.widget.MyButton2
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:background="@drawable/btn_back_two"
                    android:text="@string/next"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"
                    android:textAllCaps="false"/>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>
